remove unused header tab

--- a/angular/src/app/dashboard/header/header.component.html
+++ b/angular/src/app/dashboard/header/header.component.html
@@ -25,11 +25,11 @@
       </div>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li class="active"> <a href="">Home</a> </li>
-          <li class=""> <a href="">Questions</a> </li>
+          <!-- <li class="active"> <a href="">Home</a> </li> -->
+          <!-- <li class=""> <a href="">Questions</a> </li>
           <li class=""> <a href="">Answers</a> </li>
           <li class=""> <a href="">Subjects</a> </li>
-          <li class=""> <a href="">Results</a> </li>
+          <li class=""> <a href="">Results</a> </li> -->
         </ul>
       </div>
     </div>
@@ -40,17 +40,17 @@
     <div class="logo"><a href="#"><img src="../../../assets/images/logo1.jpg"></a></div>
     <div class="navigatn">
       <ul>
-        <li><a href="#" class="active">Home</a></li>
-        <li class=""> <a href="">Questions</a> </li>
+        <!-- <li><a href="#" class="active">Home</a></li> -->
+        <!-- <li class=""> <a href="">Questions</a> </li>
           <li class=""> <a href="">Answers</a> </li>
           <li class=""> <a href="">Subjects</a> </li>
-          <li class=""> <a href="">Results</a> </li>
+          <li class=""> <a href="">Results</a> </li> -->
       </ul>
     </div>
   </div>
   <div class="header_rgt">
     <!-- <div class="flag_div"><img src="../assets/images/flag.png"></div> -->
-    <input type="text" placeholder="Search" class="txt_box">
+    <!-- <input type="text" placeholder="Search" class="txt_box"> -->
     <!-- <div class="msg_box"><a href="#"><span class="msg_count">0</span></a></div> -->
     <div class="info_div pull-right">
       <div class="image_div"> <img src="../assets/images/pic.png"> </div>
